--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Kitt Cymonne Japson</title>
 </head>
 <body>
-    Kitt Cymonne Gwapo
+    <h1>GCASH: 09561609665</h1>
+    <h2>We wish you a merry christmas, We wish you a merry christmas</h2>
+    <img src="mon.png" alt="Kitt Cymonne Alternate world" />
+    <h3>And a happy New Year!!</h3>
 </body>
 </html>
