--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>We wish you a merry christmas, We wish you a merry christmas</h2>
     <img src="mon.png" alt="Kitt Cymonne Alternate world" />
     <h3>And a happy New Year!!</h3>
-    <a href="home.html">
+    <a href="/portfolio/index.html">
         <button>MAAYONG PASKO!!!</button>
     </a>
 </body>
