--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kitt Cymonne Japson</title>
-</head>
-<body>
-    <h1>GCASH: 09561609665</h1>
-    <h2>We wish you a merry christmas, We wish you a merry christmas</h2>
-    <img src="mon.png" alt="Kitt Cymonne Alternate world" />
-    <h3>And a happy New Year!!</h3>
-    <a href="/portfolio/dist/index.html">
-        <button>MAAYONG PASKO!!!</button>
-    </a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
